--- a/HireHubFrontend/package.json
+++ b/HireHubFrontend/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.1",
     "react-quill": "^2.0.0",
