--- a/HireHubBackend/package.json
+++ b/HireHubBackend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
+    "chart.js": "^4.4.8",
     "cloudinary": "^2.2.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "react-chartjs-2": "^5.3.0",
     "requests": "^0.3.0",
     "url": "^0.11.4",
     "validator": "^13.12.0"
