--- a/HireHubFrontend/package.json
+++ b/HireHubFrontend/package.json
@@ -18,9 +18,11 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
@@ -28,7 +30,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
